fix: word wrap long commits

--- a/styles/components/data/SoftwareBuildChanges.module.css
+++ b/styles/components/data/SoftwareBuildChanges.module.css
@@ -2,6 +2,10 @@
     @apply text-green-600 dark:text-green-500 mr-1 font-mono;
 }
 
+.commitParagraph {
+    @apply break-words whitespace-normal w-full;
+}
+
 .issue {
     @apply text-green-600 dark:text-green-500;
 }
